--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
 </head>
 <body>
     <header>
-        <img src="img/ACME_Logo.svg" alt="ACME logo"/>
-        <nav>
-            <ul>
-                <li><a href="">Products</a></li>
-                <li><a href="">Industries</a></li>
-                <li><a href="">Media</a></li>
-                <li><a href="">Downloads</a></li>
-                <li><a href="">Contacts</a></li>
-            </ul>
-        </nav>
-        <div>
-            <h1>News</h1>
+        <div class="head-top center">
+            <img class="logo" src="img/ACME_Logo.svg" alt="ACME logo"/>
+            <nav>
+                <ul>
+                    <li><a href="">Products</a></li>
+                    <li><a href="">Industries</a></li>
+                    <li><a href="">Media</a></li>
+                    <li><a href="">Downloads</a></li>
+                    <li><a href="">Contacts</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="head-bottom">
+            <h1 class="center">NEWS</h1>
         </div>
     </header>
     <main>
