--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="head-top center">
+        <div class="header-top-row center">
             <img class="logo" src="img/ACME_Logo.svg" alt="ACME logo"/>
             <nav>
                 <ul>
@@ -20,17 +20,19 @@
                 </ul>
             </nav>
         </div>
-        <div class="head-bottom">
+        <div class="header-bottom-row">
             <h1 class="center">NEWS</h1>
         </div>
     </header>
     <main>
-        <div>
-            <ol>
-                <li><a href="">Media</a></li>
-                <li><a href="">News</a></li>
-                <li><a href="">Article</a></li>
-            </ol>
+        <div class="breadcrumbs">
+            <div class="center">
+                <a href="">MEDIA</a>
+                <img src="img/icon/Arrow-Right.svg" alt=""/>
+                <a href="">NEWS</a>
+                <img src="img/icon/Arrow-Right.svg" alt=""/>
+                <a style="color:var(--clr-white)" role="link" aria-disabled="true">ARTICLE</a>
+            </div>
         </div>
         <article>
             <figure>
