--- a/index.html
+++ b/index.html
@@ -105,22 +105,22 @@
                 <h4><strong>Paleo-Eskimo culture</strong></h4>
                 <ul class="bullet-points">
                     <li class="flex">      
-                        <img src="img/icon/Arrowhead-Right3.svg" alt=""/>
+                        <!-- <img src="img/icon/Arrowhead-Right3.svg" alt=""/> -->
                         Paleo-Eskimo groups included the Pres-Dorset (c. 3200-850 BC)
                     </li>
                     <li class="flex">
-                        <img src="img/icon/Arrowhead-Right3.svg" alt=""/>
+                        <!-- <img src="img/icon/Arrowhead-Right3.svg" alt=""/> -->
                         the Saqqaq culture of Greenland (2500-800 BC)
                     </li>
                     <li class="flex">
-                        <img src="img/icon/Arrowhead-Right3.svg" alt=""/>
+                        <!-- <img src="img/icon/Arrowhead-Right3.svg" alt=""/> -->
                         the Independence I and Independence II cultures of northeastern Canada and Greenland (c. 2400-1800 BC and c. 800-1 BC)
                     </li>
                     <li class="flex">
-                        <img src="img/icon/Arrowhead-Right3.svg" alt=""/>
+                        <!-- <img src="img/icon/Arrowhead-Right3.svg" alt=""/> -->
                         the Groswater of Labrador and Nunavik</li>
                     <li class="flex">
-                        <img src="img/icon/Arrowhead-Right3.svg" alt=""/>
+                        <!-- <img src="img/icon/Arrowhead-Right3.svg" alt=""/> -->
                         the Dorset culture (500 BC to AD 1500)
                     </li>
                 </ul>
@@ -192,28 +192,28 @@
                     <h2 class="card-header">DOWNLOADS</h2>
                     <div class="card">
                         <ul class="card__list">
-                            <li class="image-icon flex-center">
+                            <li class="image-icon">
                                 <button type="button" class="dl-button info-font">
-                                    <img class="list-icon" src="img/icon/Download.svg" alt=""/>
-                                    NORTH POLE AS LAND
+                                    <!-- <img class="list-icon" src="img/icon/Download.svg" alt=""/> -->
+                                    <div>NORTH POLE AS LAND</div>
                                 </button>
                             </li>
-                            <li class="file-icon flex-center">
+                            <li class="file-icon">
                                 <button type="button" class="dl-button info-font">
-                                    <img src="img/icon/Download.svg" alt=""/>
-                                    EUROPEAN MERCATOR MAP
+                                    <!-- <img src="img/icon/Download.svg" alt=""/> -->
+                                    <div>EUROPEAN MERCATOR MAP</div>
                                 </button>
                             </li>
-                            <li class="image-icon flex-center">
+                            <li class="image-icon">
                                 <button type="button" class="dl-button info-font">
-                                    <img src="img/icon/Download.svg" alt=""/>
-                                    EARLY CATOGRAPHYS AROUND 1957
+                                    <!-- <img src="img/icon/Download.svg" alt=""/> -->
+                                    <div>EARLY CATOGRAPHYS AROUND 1957</div>
                                 </button>
                             </li>
-                            <li class="file-icon flex-center">
+                            <li class="file-icon">
                                 <button type="button" class="dl-button info-font">
-                                    <img src="img/icon/Download.svg" alt=""/>
-                                    NORTH PASSAGE
+                                    <!-- <img src="img/icon/Download.svg" alt=""/> -->
+                                    <div>NORTH PASSAGE</div>
                                 </button>
                             </li>
                         </ul>
