--- a/index.html
+++ b/index.html
@@ -223,13 +223,13 @@
                     <h2 class="card-header">LINKS</h2>
                     <div class="card">
                         <ul class="card__list">
-                            <li class="extern-icon flex-center">
+                            <li class="extern-icon">
                                 <a href="">UNENDLICHEWEITE.DE</a>
                             </li>
-                            <li class="link-icon flex-center">
+                            <li class="link-icon">
                                 <a href="">ANOTHER ACME ARTICLE</a>
                             </li>
-                            <li class="extern-icon flex-center">
+                            <li class="extern-icon">
                                 <a href="">SOMEWHERE.ORG</a>
                             </li>
                         </ul>
@@ -273,8 +273,8 @@
                     <input type="checkbox" id="consent" name="consent" required/>
                     <label for="consent">I hereby consent to the processing of my data in accordance with the <a href="">privacy information</a></label>
                     <button type="submit" class="dl-button info-font">
-                        <img src="img/icon/Arrow-Right.svg" alt=""/>
-                        SEND
+                        <!-- <img src="img/icon/Arrow-Right.svg" alt=""/> -->
+                        <div>SEND</div>
                     </button>
                 </div>
             </form>
