ergänze alt-texte für bilder

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </nav>
             <div class="burger-button">
                 <button type="button">
-                    <img src="img/icon/Menu.svg" alt="ttt"/>
+                    <img src="img/icon/Menu.svg" alt="burger menu icon"/>
                 </button>
             </div>
 
@@ -90,7 +90,7 @@
         </div>
     </header>
     <main class="main-container global-width">
-        <img class="cover-photo" src="img/photo/ACME_Article-Picture.jpg" alt="">
+        <img class="cover-photo" src="img/photo/ACME_Article-Picture.jpg" alt="birdseye photo of a snowy coast">
 
         <!-- Article Article Article Article Article -->
 
@@ -124,19 +124,19 @@
             <figure class="slideshow">
                 <div id="keen" class="keen-slider">
                     <div class="keen-slider__slide">
-                        <img src="/img/photo/ACME_Slideshow1.jpg" alt=""></img>
+                        <img src="/img/photo/ACME_Slideshow1.jpg" alt="birdseye photo of a snowy coast"></img>
                     </div>
                     <div class="keen-slider__slide">
-                        <img src="/img/photo/ACME_Slideshow2.jpg" alt=""></img>
+                        <img src="/img/photo/ACME_Slideshow2.jpg" alt="placeholder image"></img>
                     </div>
                     <div class="keen-slider__slide">
-                        <img src="/img/photo/ACME_Slideshow3.jpg" alt=""></img>
+                        <img src="/img/photo/ACME_Slideshow3.jpg" alt="placeholder image"></img>
                     </div>
                     <div class="keen-slider__slide">
-                        <img src="/img/photo/ACME_Slideshow4.jpg" alt=""></img>
+                        <img src="/img/photo/ACME_Slideshow4.jpg" alt="placeholder image"></img>
                     </div>
                     <div class="keen-slider__slide">
-                        <img src="/img/photo/ACME_Slideshow5.jpg" alt=""></img>
+                        <img src="/img/photo/ACME_Slideshow5.jpg" alt="placeholder image"></img>
                     </div>
                 </div>
                 <figcaption class="slideshow__caption info-font">
@@ -144,10 +144,10 @@
                 </figcaption>
                 <div class="slideshow__buttons">
                     <button id="prev" type="button">
-                        <img class="icon" src="img/icon/Arrowhead-Up.svg" alt="XXXXX"/>
+                        <img src="img/icon/Arrowhead-Up.svg" alt="arrow up icon"/>
                     </button>
                     <button id="next" type="button">
-                        <img class="icon" src="img/icon/Arrowhead_Down.svg" alt="YYYYY"/>
+                        <img src="img/icon/Arrowhead_Down.svg" alt="arrow down icon"/>
                     </button>
                 </div>
             </figure>
@@ -168,7 +168,7 @@
             <div>
                 <h2 class="card-header">CONTACT</h2>
                 <div class="card">
-                    <img class="card__picture" src="img/photo/ACME_Contact-Picture.jpg" alt=""/>
+                    <img class="card__picture" src="img/photo/ACME_Contact-Picture.jpg" alt="headshot of mark looking grim"/>
                     <h3 class="h2-font card-title">MARK MUSTERMAN
                         <span class="subtitle">MARKETING ASSISTENT</span>
                     </h3>
@@ -274,13 +274,13 @@
             </div>
             <div class="credentials__social">
                 <a href="">
-                    <img src="img/icon/Facebook.svg" alt="ttt"/>
+                    <img src="img/icon/Facebook.svg" alt="facebook logo"/>
                 </a>
                 <a href="">
-                    <img src="img/icon/LinkedIn.svg" alt="vvv"/>
+                    <img src="img/icon/LinkedIn.svg" alt="linkedin logo"/>
                 </a>
                 <a href="">
-                    <img src="img/icon/Twitter.svg" alt="wwww"/>
+                    <img src="img/icon/Twitter.svg" alt="twitter logo"/>
                 </a>
             </div>
             <div class="credentials__copy">
