make card header full responsive

--- a/index.html
+++ b/index.html
@@ -74,18 +74,17 @@
                     <img src="img/icon/Menu.svg" alt="burger menu icon"/>
                 </button>
             </div>
-
         </div>
         <div class="header-title">
             <h1 class="global-width h1-font">NEWS</h1>
         </div>
         <div class="header-breadcrumbs">
-            <div class="global-width flex-center crumbs-font">
-                <a class="no-deco" href="">MEDIA</a>
+            <div class="global-width crumbs-font">
+                <a href="">MEDIA</a>
                 <img src="img/icon/Arrow-Right.svg" alt="arrow right icon"/>
-                <a class="no-deco" href="">NEWS</a>
+                <a href="">NEWS</a>
                 <img src="img/icon/Arrow-Right.svg" alt="arrow right icon"/>
-                <a class="no-deco" role="link" aria-disabled="true">ARTICLE</a>
+                <a role="link" aria-disabled="true">ARTICLE</a>
             </div>
         </div>
     </header>
@@ -103,18 +102,18 @@
             <p>Pityful a rethoric question ran over her cheek, then she continued her way. On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
             <h4><strong>Paleo-Eskimo culture</strong></h4>
             <ul class="bullet-points">
-                <li class="flex">      
+                <li>      
                     Paleo-Eskimo groups included the Pres-Dorset (c. 3200-850 BC)
                 </li>
-                <li class="flex">
+                <li>
                     the Saqqaq culture of Greenland (2500-800 BC)
                 </li>
-                <li class="flex">
+                <li>
                     the Independence I and Independence II cultures of northeastern Canada and Greenland (c. 2400-1800 BC and c. 800-1 BC)
                 </li>
-                <li class="flex">
+                <li>
                     the Groswater of Labrador and Nunavik</li>
-                <li class="flex">
+                <li>
                     the Dorset culture (500 BC to AD 1500)
                 </li>
             </ul>
@@ -154,7 +153,7 @@
             <p>Pityful a rethoric question ran over her cheek, then she continued her way. On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
             <p>But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their projects again and again. And if she hasn’t been rewritten, then they are still using her.Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
             <blockquote class="quote">
-                <div class="quote__inner-container flex-col">
+                <div class="quote__inner-container">
                     <p>"The Allied commitment to resupply the Soviet Union via its northern ports was opposed by the German naval and air forces."</p>
                     <cite class="info-font">SOMEBOY, ANON CORPORATION</cite>
                 </div>
@@ -164,7 +163,7 @@
 
         <!-- Sidebar Sidebar Sidebar Sidebar Sidebar -->
 
-        <aside class="flex-col">
+        <aside>
             <div>
                 <h2 class="card-header">CONTACT</h2>
                 <div class="card">
@@ -173,10 +172,10 @@
                         <span class="subtitle">MARKETING ASSISTENT</span>
                     </h3>
                     <ul class="card__list">
-                        <li class="phone-icon flex-center">
+                        <li class="phone-icon">
                             <a href="">+49 123 123 123 12</a>
                         </li>
-                        <li class="clock-icon flex-center">
+                        <li class="clock-icon">
                             Mo/Tu/We: 8:00 a.m. - 8:00 p.m.
                         </li>
                     </ul>
