svg inline background images für icons

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                 <div class="form__send">
                     <input type="checkbox" id="consent" name="consent" required/>
                     <label for="consent">I hereby consent to the processing of my data in accordance with the <a href="">privacy information</a></label>
-                    <button type="submit" class="dl-button info-font">
+                    <button type="submit" class="dl-button arrow-icon info-font">
                         <div>SEND</div>
                     </button>
                 </div>
