--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="stylesheet" type="text/css" href="css/keen-slider.css" />
     <title>News</title>
-    <link rel="shortcut icon" type="image/jpg" href="/img/ACME_Favicon.ico"/>
+    <link rel="shortcut icon" type="image/jpg" href="img/ACME_Favicon.ico"/>
 </head>
 <body>
 
@@ -131,19 +131,19 @@
             <figure class="slideshow">
                 <div id="keen" class="keen-slider">
                     <div class="keen-slider__slide">
-                        <img src="/img/photo/ACME_Slideshow1.jpg" alt="birdseye photo of a snowy coast"></img>
+                        <img src="img/photo/ACME_Slideshow1.jpg" alt="birdseye photo of a snowy coast"></img>
                     </div>
                     <div class="keen-slider__slide">
-                        <img src="/img/photo/ACME_Slideshow2.jpg" alt="placeholder image"></img>
+                        <img src="img/photo/ACME_Slideshow2.jpg" alt="placeholder image"></img>
                     </div>
                     <div class="keen-slider__slide">
-                        <img src="/img/photo/ACME_Slideshow3.jpg" alt="placeholder image"></img>
+                        <img src="img/photo/ACME_Slideshow3.jpg" alt="placeholder image"></img>
                     </div>
                     <div class="keen-slider__slide">
-                        <img src="/img/photo/ACME_Slideshow4.jpg" alt="placeholder image"></img>
+                        <img src="img/photo/ACME_Slideshow4.jpg" alt="placeholder image"></img>
                     </div>
                     <div class="keen-slider__slide">
-                        <img src="/img/photo/ACME_Slideshow5.jpg" alt="placeholder image"></img>
+                        <img src="img/photo/ACME_Slideshow5.jpg" alt="placeholder image"></img>
                     </div>
                 </div>
                 <figcaption class="slideshow__caption info-font">
